[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aes-128-cli-tool"
version = "1.0.0"
authors = [
  { name="Thomas Spielberg", email="thomasspielberg5@gmail.com" },
]
description = "A simple AES-128 Cipher CLI tool (skeleton; cipher to be implemented)."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama==0.4.6",
    "pyfiglet==1.0.4",
    "pyperclip==1.10.0",
]

[project.scripts]
aes = "aes_cipher.cli:main"
